# ava

./: .gitattributes  LICENSE.txt  README  README.md  flake.nix
adc/: README  README.md  TODO.md  build.zig  build.zig.zon  test.bas
adc/src/: Args.zig  Editor.zig  EventThread.zig  Font.zig  Kyuubey.zig  et.zig  main.zig
adc/src/fonts/: 8x16.txt  9x16.txt  moderndos.txt
basic/: .gitignore  README  README.md  build.zig  build.zig.zon  deps.nix  flake.nix  hello.bas
basic/src/: Compiler.zig  ErrorInfo.zig  LocHandler.zig  Parser.zig  PrintLoc.zig  Token.zig  Tokenizer.zig  ast.zig  compile.zig  core-crt0.S  core.ld  core.zig  isa.zig  loc.zig  main.zig  parse.zig  print.zig  root.zig  stack.zig  test.zig  token.zig  ty.zig
basic/src/ast/: Expr.zig  Stmt.zig
basic/src/bas/: ft.basic.bas  ft.div.bas
basic/src/core/: core.ld  crt0.S  main.zig  root.zig  uart.zig
basic/src/main/: ast.zig  bc.zig  common.zig  compile.zig  opts.zig  pp.zig  repl.zig  run.zig
basic/src/test/: pprt.loopslabels.bas  pprt.printif.bas
basic/src/testout/: printzones.bas
basic/src/testpp/: 01.bas  01.norm.bas  02.bas
core/: .gitignore  README  README.md  build.zig  build.zig.zon  flake.nix  niar.nix  pyproject.toml
core/avacore/: __init__.py  targets.py
core/avacore/rtl/: __init__.py  core.py  divider.py  imem.py  isa.py  printer.py  stack.py  uart.py
core/cxxrtl/: build.zig  build.zig.zon
core/cxxrtl/src/: SimController.zig  SimThread.zig  SpiConnector.zig  UartConnector.zig  main.zig
core/src/: core.ld  crt0.S  frame.zig  heap.zig  main.zig  mmio.zig  mod.zig  proto.zig  root.zig  uart.zig
core/tests/: 248.avc  68.avc  680.avc  __init__.py  helpers.py  printv.avc  test_core.py  test_core_68.avc  test_core_alu.py  test_core_alu_integer_ops.avc  test_core_print_various.avc  test_divider.py  test_imem.py  test_printer.py  test_stack.py  test_top.py
soc/: .gitignore  README  README.md  deps.nix  flake.nix  pyproject.toml
soc/avasoc/: VexRiscv.v  __init__.py  targets.py
soc/avasoc/rtl/: __init__.py  core.py  imem.py  spifr.py  uart.py
soc/cxxrtl/: build.zig  build.zig.zon
soc/cxxrtl/src/: Args.zig  SimController.zig  SimState.zig  SimThread.zig  SpiFlashConnector.zig  UartConnector.zig  UartProtoConnector.zig  main.zig
soc/tests/: test_spifr.py
