[project]
name = "avacore"
version = "0.0"
description = ""
authors = [
    {name = "Asherah Connor", email = "ashe@kivikakk.ee"},
]
dependencies = [
    "amaranth @ git+https://github.com/amaranth-lang/amaranth@ba1860553cacfbb5d358f9a9e0699fb7efce0451",
    "amaranth-stdio @ git+https://github.com/kivikakk/amaranth-stdio@ca4fac262a2290495c82d76aa785bd8707afa781",
    "niar @ git+https://git.sr.ht/~kivikakk/niar@a478292edabfee100c450a59d0898f3f6bf91c51",
]
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
avacore = "avacore:main"

[tool.pdm.dev-dependencies]
test = [
    "amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards@19b97324ecf9111c5d16377af79f82aad761c476",
    "pytest>=8.2.2",
    "pytest-xdist>=3.6.1",
    "pytest-watcher>=0.4.2",
]

[tool.pytest.ini_options]
addopts = ["-n", "auto"]
testpaths = ["tests"]
markers = ["slow"]
