[project]
name = "avacore"
version = "0.0"
description = ""
authors = [
    {name = "Asherah Connor", email = "ashe@kivikakk.ee"},
]
dependencies = [
    "niar",
    "amaranth-stdio",
]
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}

[project.urls]
Homepage = "https://sr.ht/~kivikakk/ava"

# [build-system]
# requires = ["pdm-backend"]
# build-backend = "pdm.backend"

[project.scripts]
avacore = "avacore:main"

[tool.pytest.ini_options]
addopts = ["-n", "auto"]
testpaths = ["tests"]
markers = ["slow"]

[tool.uv]
dev-dependencies = [
    "amaranth-boards",
    "pytest>=8.2.2",
    "pytest-xdist>=3.6.1",
    "pytest-watcher>=0.4.2",
]

[tool.uv.sources]
niar = { git = "https://git.sr.ht/~kivikakk/niar", rev = "9710cb180fb368e9bb93016b0cc20d479bd7f083" }
amaranth-stdio = { git = "https://github.com/kivikakk/amaranth-stdio", rev = "ca4fac262a2290495c82d76aa785bd8707afa781" }
amaranth-boards = { git = "https://github.com/amaranth-lang/amaranth-boards", rev = "19b97324ecf9111c5d16377af79f82aad761c476" }
