[project]
name = "avasoc"
version = "0.0"
description = ""
authors = [
    {name = "Asherah Connor", email = "ashe@kivikakk.ee"},
]
dependencies = [
    "niar @ git+https://git.sr.ht/~kivikakk/niar@2cbed9def87de25f19970bff902c691b2f354276",
    "amaranth @ git+https://github.com/kivikakk/amaranth@f8ea807a9108a99ec801d1f1e4b8e63019ec82ec",
    "amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards@19b97324ecf9111c5d16377af79f82aad761c476",
    "amaranth-stdio @ git+https://github.com/kivikakk/amaranth-stdio@ca4fac262a2290495c82d76aa785bd8707afa781",
    "amaranth-soc @ git+https://github.com/kivikakk/amaranth-soc@7ed9405aa5d55f550dba1f531359d1185129b117",
]
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}

[project.urls]
Homepage = "https://sr.ht/~kivikakk/ava"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
avasoc = "avasoc:main"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.2",
    "pytest-xdist>=3.6.1",
    "pytest-watcher>=0.4.2",
]

[tool.pytest.ini_options]
addopts = ["-n", "auto"]
testpaths = ["tests"]
markers = ["slow"]
